app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    app: app1
  name: app1
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: app1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: docker.io/arturmatos/simple-web-app:latest
        ports:
        - containerPort: 5000
      restartPolicy: Always
      schedulerName: default-scheduler
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app1
  name: app1
  namespace: default
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: app1
  type: NodePort
