app2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    fluxcd.io/automated: "true"
    fluxcd.io/tag.app2: glob:2.0.*
  generation: 1
  labels:
    app: app2
  name: app2
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: app2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: docker.io/arturmatos/simple-web-app:3.0.0
        ports:
        - containerPort: 5000
      restartPolicy: Always
      schedulerName: default-scheduler
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app2
  name: app2
  namespace: default
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: app2
  type: NodePort
