app3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    fluxcd.io/automated: "true"
    fluxcd.io/tag.app3: glob:latest
  generation: 1
  labels:
    app: app3
  name: app3
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: app3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: docker.io/arturmatos/simple-web-app:2.0.0
        ports:
        - containerPort: 5000
      restartPolicy: Always
      schedulerName: default-scheduler
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app3
  name: app3
  namespace: default
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: app3
  type: NodePort
