ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: my-kubernetes.info
    http:
      paths:
      - path: /app1/*
        backend:
          serviceName: app1
          servicePort: 5000
      - path: /app2/*
        backend:
          serviceName: app2
          servicePort: 5000
      - path: /app3/*
        backend:
          serviceName: app3
          servicePort: 5000
